<?xml version="1.0" encoding="utf-8"?><!--
     Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <!-- Label for textview to chose snooze selection mode [CHAR LIMIT=30] -->
    <string name="snooze_mode_label">Time selection mode</string>
    <!-- Label for textview to chose snooze selection mode [CHAR LIMIT=30] -->
    <string name="radiobutton_text_reminder_snooze_mode_timespan">Time interval</string>
    <!-- Label for textview to chose snooze selection mode [CHAR LIMIT=30] -->
    <string name="radiobutton_text_reminder_snooze_mode_absolute_time">Absolute time</string>
    <!-- Label for button to confirm chosen date or time [CHAR LIMIT=30] -->
    <string name="done_label">Done</string>
    <!-- Content description for the days selector in the timespan picker, which displays
         selectable count of days along the inside edge of a circle.
         [CHAR LIMIT=50] -->
    <string name="timespan_day_picker_description">Days circular slider</string>
    <!-- Content description for the hour selector in the timespan picker, which displays
         selectable hours of the day along the inside edge of a circle, as in an analog clock.
         [CHAR LIMIT=50] -->
    <string name="timespan_hour_picker_description">Hours circular slider</string>
    <!-- Content description for the minute selector in the timespan picker, which displays
         selectable five-minute intervals along the inside edge of a circle, as in an analog clock.
         [CHAR LIMIT=50] -->
    <string name="timespan_minute_picker_description">Minutes circular slider</string>
    <!-- Content description for the hour selector in the time picker, which displays
         selectable hours of the day along the inside edge of a circle, as in an analog clock.
         [CHAR LIMIT=50] -->
    <string name="hour_picker_description">Hours circular slider</string>
    <!-- Content description for the minute selector in the time picker, which displays
         selectable five-minute intervals along the inside edge of a circle, as in an analog clock.
         [CHAR LIMIT=50] -->
    <string name="minute_picker_description">Minutes circular slider</string>
    <!-- Accessibility announcement for hour circular picker [CHAR LIMIT=NONE] -->
    <string name="select_hours">Select hours</string>
    <!-- Accessibility announcement for minute circular picker [CHAR LIMIT=NONE] -->
    <string name="select_minutes">Select minutes</string>
    <!-- Content description for the month and day selector in the date picker, which displays
        a selectable grid of days laid out by month.
        [CHAR LIMIT=50] -->
    <string name="day_picker_description">Month grid of days</string>
    <!-- Content description for the year selector in the date picker, which displays
        a scrolling, vertical list of years.
        [CHAR LIMIT=50] -->
    <string name="month_picker_description">Months grid</string>
    <string name="year_picker_description">Year list</string>
    <!-- Accessibility announcement for the day picker [CHAR LIMIT=NONE] -->
    <string name="select_day">Select month and day</string>
    <!-- Accessibility announcement for the month picker [CHAR LIMIT=NONE] -->
    <string name="select_month">Select month</string>
    <!-- Accessibility announcement for the year picker [CHAR LIMIT=NONE] -->
    <string name="select_year">Select year</string>
    <!-- Accessibility description for the item that is currently selected. -->
    <string name="item_is_selected"><xliff:g id="item" example="2015">%1$s</xliff:g> selected</string>
    <!-- Accessibility announcement when a number that had been typed in is deleted [CHAR_LIMIT=NONE] -->
    <string name="deleted_key"><xliff:g id="key" example="4">%1$s</xliff:g> deleted</string>
    <string name="timespan_days_marker">D</string>
    <string name="timespan_hours_marker">H</string>
    <string name="timespan_minutes_marker">M</string>
    <!-- DO NOT TRANSLATE -->
    <string name="time_placeholder">--</string>
    <!-- DO NOT TRANSLATE -->
    <string name="time_separator">:</string>
    <!-- DO NOT TRANSLATE -->
    <string name="radial_numbers_typeface">sans-serif</string>
    <!-- DO NOT TRANSLATE -->
    <string name="sans_serif">sans-serif</string>
    <!-- DO NOT TRANSLATE -->
    <string name="day_of_week_label_typeface">sans-serif</string>
</resources>