<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2013 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License
-->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/timespan_display"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/white">

    <TextView
        android:id="@+id/day_space"
        style="@style/time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/days_label"
        android:importantForAccessibility="no"
        android:text="@string/time_placeholder"
        android:visibility="invisible"/>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_alignLeft="@+id/day_space"
        android:layout_alignRight="@+id/day_space"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/extra_time_label_margin"
        android:layout_marginRight="@dimen/extra_time_label_margin">

        <com.android.supportdatetimepicker.AccessibleTextView
            android:id="@+id/days"
            style="@style/time_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:text="@string/time_placeholder"
            android:textColor="@color/blue"/>
    </FrameLayout>

    <com.android.supportdatetimepicker.AccessibleTextView
        android:id="@+id/days_hitspace"
        android:layout_width="@dimen/ampm_label_size"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/days_label"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/days_label"/>

    <TextView
        android:id="@+id/days_label"
        style="@style/ampm_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/hour_space"
        android:layout_toLeftOf="@+id/separator1"
        android:importantForAccessibility="no"
        android:paddingLeft="@dimen/ampm_left_padding"
        android:paddingRight="@dimen/ampm_left_padding"
        android:text="@string/timespan_days_marker"/>

    <TextView
        android:id="@+id/separator1"
        style="@style/time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/hour_space"
        android:importantForAccessibility="no"
        android:paddingLeft="@dimen/separator_padding"
        android:paddingRight="@dimen/separator_padding"
        android:text="@string/time_separator"/>

    <TextView
        android:id="@+id/hour_space"
        style="@style/time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:importantForAccessibility="no"
        android:text="@string/time_placeholder"
        android:visibility="invisible"/>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_alignLeft="@+id/hour_space"
        android:layout_alignRight="@+id/hour_space"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/extra_time_label_margin"
        android:layout_marginRight="@dimen/extra_time_label_margin">

        <com.android.supportdatetimepicker.AccessibleTextView
            android:id="@+id/hours"
            style="@style/time_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:text="@string/time_placeholder"
            android:textColor="@color/blue"/>
    </FrameLayout>

    <com.android.supportdatetimepicker.AccessibleTextView
        android:id="@+id/hours_hitspace"
        android:layout_width="@dimen/ampm_label_size"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/hours_label"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/hours_label"/>

    <TextView
        android:id="@+id/hours_label"
        style="@style/ampm_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/hour_space"
        android:layout_toRightOf="@+id/hour_space"
        android:importantForAccessibility="no"
        android:paddingLeft="@dimen/ampm_left_padding"
        android:paddingRight="@dimen/ampm_left_padding"
        android:text="@string/timespan_hours_marker"/>

    <TextView
        android:id="@+id/separator2"
        style="@style/time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/hours_label"
        android:importantForAccessibility="no"
        android:paddingLeft="@dimen/separator_padding"
        android:paddingRight="@dimen/separator_padding"
        android:text="@string/time_separator"/>

    <TextView
        android:id="@+id/minutes_space"
        style="@style/time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/separator2"
        android:importantForAccessibility="no"
        android:text="@string/time_placeholder"
        android:visibility="invisible"/>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_alignLeft="@+id/minutes_space"
        android:layout_alignRight="@+id/minutes_space"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/extra_time_label_margin"
        android:layout_marginRight="@dimen/extra_time_label_margin">

        <com.android.supportdatetimepicker.AccessibleTextView
            android:id="@+id/minutes"
            style="@style/time_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:text="@string/time_placeholder"/>
    </FrameLayout>

    <com.android.supportdatetimepicker.AccessibleTextView
        android:id="@+id/minutes_hitspace"
        android:layout_width="@dimen/ampm_label_size"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/minutes_label"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/minutes_label"/>

    <TextView
        android:id="@+id/minutes_label"
        style="@style/ampm_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/hour_space"
        android:layout_toRightOf="@+id/minutes_space"
        android:importantForAccessibility="no"
        android:paddingLeft="@dimen/ampm_left_padding"
        android:paddingRight="@dimen/ampm_left_padding"
        android:text="@string/timespan_minutes_marker"/>
</RelativeLayout>